--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "\"chat_app training\"",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.22",
+    "sequelize": "^6.32.0",
+    "socket.io": "^4.6.2"
   }
 }
